# signal-backup-decode

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
proto/: Backups.proto
src/: Backups.rs  args.rs  decrypter.rs  display.rs  errors.rs  frame.rs  input.rs  main.rs  message.rs  output.rs  output_csv.rs  output_none.rs  output_raw.rs
