[package]
name = "signal-backup-decode"
version = "0.1.3"
authors = ["pajowu <pajowu@pajowu.de>"]
build = "build.rs"
description = "A simple tool to decode signal backups"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/pajowu/signal-backup-decode"
edition = "2018"

[dependencies]
protobuf = "^2.14"
byteorder = "^1"
rust-ini = "^0.15"
clap = "^2.33"
simplelog = "^0.8"
anyhow = "^1.0"
log = "^0.4"
rusqlite = "^0.23"
hkdf = "^0.9"
sha2 = "^0.9"
hmac = "^0.8"
aes-ctr = "^0.4"
generic-array = "^0.14"
subtle = "^2.2"

[build-dependencies]
protoc-rust = {version = "^2.14", optional = true}

[features]
default = []
rebuild-protobuf = ["protoc-rust"]
