[package]
name = "signal-backup-decode"
version = "0.1.5"
authors = ["pajowu <pajowu@pajowu.de>"]
build = "build.rs"
description = "A simple tool to decode signal backups"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/pajowu/signal-backup-decode"

[dependencies]
openssl = "^0.10"
hex = "^0.3"
protobuf = "^2.14"
byteorder = "^1"
rust-crypto = "^0.2"
error-chain = "^0.12"
sqlite = "^0.25"
rust-ini = "^0.15"
clap = "^2.33"
tempfile = "^3"

[build-dependencies]
protoc-rust = {version = "^2.14", optional = true}

[features]
default = []
rebuild-protobuf = ["protoc-rust"]
